code/k8s/privilegded-container-spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ubuntu
    labels:
      app: ubuntu
spec:
    selector:
      matchLabels:
        app: ubuntu
    template:
      metadata:
        labels:
          app: ubuntu
      spec:
        containers:
        - name: ubuntu
          image: ubuntu:18.04
          ports:
          - containerPort: 22
          securityContext:
            privileged: true
