code/k8s/vanialla-centos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: centos
    namespace: security
    labels:
      app: centos
spec:
    replicas: 1
    selector:
      matchLabels:
        app: centos
    template:
      metadata:
        labels:
          app: centos
      spec:
        containers:
        - name: centos
          image: marketplace.gcr.io/google/centos7
