code/k8s/bad-k8s-conf2.yaml
apiVersion: v1
kind: Service
metadata:
    name: ubuntu-lb
    labels:
        app: ubuntu
spec:
    ports:
      - port: 22
    selector:
      app: ubuntu
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ubuntu
    labels:
      app: ubuntu
spec:
    selector:
      matchLabels:
        app: ubuntu
    template:
      metadata:
        labels:
          app: ubuntu
      spec:
        containers:
        - name: ubuntu
          image: ubuntu:18.04
          ports:
          - containerPort: 22
