code/k8s/httpd.yaml

apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: security
  labels:
    app.kubernetes.io/name: security
  annotations:
    cloud.google.com/load-balancer-type: Internal
spec:
  type: LoadBalancer
  selector:
    app: httpd
  ports:
    - name: httpd-port
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: httpd
    namespace: security
    labels:
      app: httpd
spec:
    replicas: 1
    selector:
      matchLabels:
        app: httpd
    template:
      metadata:
        labels:
          app: httpd
      spec:
        containers:
        - name: httpd
          image: <image>
          ports:
          - containerPort: 8080
