code/k8s/nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: security
  labels:
    app.kubernetes.io/name: security
  annotations:
    cloud.google.com/load-balancer-type: Internal
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: nginx-port
      protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: security
    labels:
      app: nginx
spec:
    replicas: 1
    selector:
      matchLabels:
        app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
